# src/controllers/auth.controller.ts
@@ -11,7 +11,7 @@ import { IReqUser } from "../middlewares/auth.middleware";
  */
 type TRegister = {
     fullName : string;
-    userName : string;
+    username : string;
     email : string;
     password : string;
     confirmPassword : string;
@@ -24,20 +24,43 @@ type TLogin = {
 
 const registerValidateSchema = Yup.object({
     fullName : Yup.string().required(),
-    userName : Yup.string().required(),
+    username : Yup.string().required(),
     email : Yup.string().required(),
-    password : Yup.string().required(),
+    password : Yup.string()
+        .required()
+        .min(6, "Password must be at least 6 characters")
+        .test(
+            "at-least-one-uppercase-letter", 
+            "Contains at least 1 uppercase letter", 
+            (value) => {
+                if(!value) return false;
+                const regex = /^(?=.*[A-Z])/;
+                return regex.test(value);
+            }
+        )
+        .test(
+            "at-least-one-number", 
+            "Contains at least 1 number", 
+            (value) => {
+                if(!value) return false;
+                const regex = /^(?=.*\d)/;
+                return regex.test(value);
+            }
+        ),
     confirmPassword : Yup.string().required().oneOf([Yup.ref("password"), ""], "Password Must Be Matched!"),
 })
 
 export default {
+    /**
+     * Disini req.body mengambil data Request dari FE
+     * Lalu, as unknown as digunakan untuk casting agar cocok dengan TRegister
+     * as unknown ini memaksa TypeScript ini untuk mempercayai tipe data yang dikirimkan FE sama dengan tipe data TRegister
+     */
     async register(req: Request, res:Response) {
         /**
-         * Disini req.body mengambil data Request dari FE
-         * Lalu, as unknown as digunakan untuk casting agar cocok dengan TRegister
-         * as unknown ini memaksa TypeScript ini untuk mempercayai tipe data yang dikirimkan FE sama dengan tipe data TRegister
+         #swagger.tags = ['Auth']
          */
-        const {fullName, userName, email, password, confirmPassword} = req.body as unknown as TRegister;
+        const {fullName, username, email, password, confirmPassword} = req.body as unknown as TRegister;
 
         try { 
             /**
@@ -46,7 +69,7 @@ export default {
              */
             await registerValidateSchema.validate({
                 fullName,
-                userName,
+                username,
                 email,
                 password,
                 confirmPassword,
@@ -54,7 +77,7 @@ export default {
 
             const result = await UserModel.create({
                 fullName,
-                userName,
+                username,
                 email,
                 password,
             });
@@ -74,6 +97,7 @@ export default {
 
     async login(req:Request, res:Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.requestBody = {
             required: true,
             schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -90,9 +114,10 @@ export default {
                         email: identifier,
                     },
                     {
-                        userName: identifier,
+                        username: identifier,
                     },
-                ]
+                ],
+                isActive: true,
             });
 
             if(!userByIdentifier) {
@@ -134,6 +159,7 @@ export default {
 
     async me(req: IReqUser, res:Response) {
         /**
+         #swagger.tags = ['Auth']
          #swagger.security = [{
          "bearerAuth": []
          }]
@@ -154,6 +180,42 @@ export default {
                 data: null,
             })
         }
-    }
+    },
+
+    async activation(req: Request, res:Response) {
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+            required: true,
+            schema: {$ref: '#/components/schemas/ActivationRequest'}
+         }
+         */
+        try {
+            const { code } = req.body as {code: string};
+
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode: code,
+                },
+                {
+                    isActive: true,
+                },
+                {
+                    new: true,
+                },
+            );
+
+            res.status(200).json({
+                message: "user successfully activated",
+                data: user
+            })
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            })
+        }
+    },
 
 };
