# src/routes/api.ts
@@ -9,6 +9,7 @@ const router = express.Router();
 router.post("/auth/register", authController.register);
 router.post("/auth/login", authController.login);
 router.get("/auth/me", authMiddleware, authController.me);
+router.post("/auth/activation", authMiddleware, authController.activation);
 router.get("/dummy", dummyController.dummy);
 
 
